tests/snapshots/snapshot_screens__action_menu.snap
---
source: tests/snapshot_screens.rs
description: ContactDetail → press Enter on field
expression: output
---
                                Abigale Schroeder

┌ Perspective ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Abigale Schroeder ───────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:   ┌ Actions [Es┐
                                 │  Call      │
┌ Fields ────────────────────────│  Send SMS  │────────────────────────────────┐
└────────────────────────────────│  Copy      │────────────────────────────────┘
  Private note for this field:   └────────────┘

┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:

  Private note:

┌ Trust & Permissions ─────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[Space] select  [e] Edit  [Enter] Verify Fingerprint  [Enter] What do they see?
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
