tests/snapshots/snapshot_screens__backup_import.snap
---
source: tests/snapshot_screens.rs
description: Backup → select Restore Backup
expression: output
---
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity. To preserve contacts, use devic│
└──────────────────────────────────────────────────────────────────────────────┘















[Enter] Create Backup  [Enter] Restore Backup  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
