tests/snapshots/snapshot_screens__contact_detail.snap
---
source: tests/snapshot_screens.rs
description: Contacts → press Enter on contact
expression: output
---
                                Abigale Schroeder

┌ Perspective ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Abigale Schroeder ───────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:

┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:

┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:

  Private note:

┌ Trust & Permissions ─────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[Space] select  [e] Edit  [Enter] What do they see?  [Esc] Back  [?] help
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
