tests/snapshots/snapshot_screens__contact_edit.snap
---
source: tests/snapshot_screens.rs
description: "ContactDetail → press 'e' (Edit)"
expression: output
---
                                  [1/3]  ● ○ ○
                                  Edit Contact

Display Name
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│Abigale Schroeder█                                                            │
└──────────────────────────────────────────────────────────────────────────────┘

────────────────────────────────────────────────────────────────────────────────
┌ Fields (Show/Hide) ──────────────────────────────────────────────────────────┐
│Type       Label           Value                            Visibility        │
│                                                                              │
│Phone      Mobile          +1-200-100-1000                  Shown             │
│Email      Email           abigale.schroeder@example.com    Shown             │
│Address    Address         100 Main St, Springfield         Shown             │
└──────────────────────────────────────────────────────────────────────────────┘






[Enter] Continue  [?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
