tests/snapshots/snapshot_screens__contact_groups.snap
---
source: tests/snapshot_tests.rs
description: ContactDetail → select Groups
expression: output
---
                          Groups: Abigale Schroeder

Toggle which fields are visible to this contact.

┌ Groups ──────────────────────────────────────────────────────────────────────┐
│ [x] Family                                                                   │                                                │
│ [x] Friends                                                                  │
│ [ ] Co-workers                                                               │
└──────────────────────────────────────────────────────────────────────────────┘

┌─── Seen Entry ───────────────────────────────────────Seen by Groups ─────────┐
│   Email alice@company.com (Work)                     Family                  │
│   Phone +41 79 123 45 67 (Mobile)                    Friends, Family         │
└──────────────────────────────────────────────────────────────────────────────┘





[Enter] Save  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │ 3 ★ Contacts  │  4 Settings   │    5 Help
